--- a/Game.ini
+++ b/Game.ini
@@ -53,6 +53,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🚀 手动切换
 custom_proxy_group=📲 电报消息`select`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 手动切换`[]DIRECT
