--- a/Quantumult X/QX-self.conf
+++ b/Quantumult X/QX-self.conf
@@ -10,7 +10,7 @@ icmp_auto_reply = true
 [dns]
 no-ipv6
 doh-server=https://223.5.5.5/dns-query, https://dns11.quad9.net/dns-query
-dot-server=tls://8.8.8.8, tls://dns11.quad9.net
+# dot-server=tls://8.8.8.8, tls://dns11.quad9.net
 server=119.29.29.29
 server=180.184.1.1
 server=223.5.5.5
