--- a/Quantumult X/QX-self.conf
+++ b/Quantumult X/QX-self.conf
@@ -67,7 +67,7 @@ https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/Tik
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=🤖OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=false, enabled=true
 
 # Netflix
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=🎬Netflix, force-policy=Netfilx, update-interval=172800, opt-parser=false , enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=🎬Netflix, force-policy=Netflix, update-interval=172800, opt-parser=false , enabled=true
 
 # Speedtest
 https://raw.githubusercontent.com/Coffee-Martini/ACL4SSR/main/Rule-Set/SpeedTest.list, tag=🔄Speedtest, force-policy=Speedtest, update-interval=172800, opt-parser=true, enabled=true
