--- a/Quantumult X/QX-self.conf
+++ b/Quantumult X/QX-self.conf
@@ -23,7 +23,7 @@ circumvent-ipv6-answer = ::
 [policy]
 #节点处理
 static=节点选择, 手动选择, 自动选择, 香港, 台湾, 日本, 韩国, 新加坡, 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
-static=手动选择, server-tag-regex=.*, check-interval=600, tolerance=80, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Available.png
+static=手动选择, server-tag-regex=.*, DIRECT, check-interval=600, tolerance=80, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Available.png
 url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=600, tolerance=80, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Urltest.png
 #各项细分
 static=Telegram, DIRECT, 香港, 台湾, 日本, 韩国, 新加坡, 美国, 节点选择, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Telegram.png
