--- a/ACL4SSR-cc.ini
+++ b/ACL4SSR-cc.ini
@@ -53,6 +53,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
+rule=https://raw.githubusercontent.com/Coffee-Martini/ACL4SSR/main/Rule-Set/customize.list
 ;设置规则标志位
 
 ;设置分组标志位
