--- a/Loon/loon-coffee.conf
+++ b/Loon/loon-coffee.conf
@@ -101,11 +101,11 @@ AutoTest = load-balance,coffee,url = http://cp.cloudflare.com/generate_204,inter
 
 [Rule]
 DOMAIN-SUFFIX,linkedin.com,Google
-DOMAIN,sub.store,Auto
-DOMAIN,boxjs.com,Auto
-DOMAIN,boxjs.net,Auto
-DOMAIN,loon-gallery.vercel.app,Auto
-DOMAIN,sub-store.vercel.app,Auto
+DOMAIN,sub.store,AutoTest
+DOMAIN,boxjs.com,AutoTest
+DOMAIN,boxjs.net,AutoTest
+DOMAIN,loon-gallery.vercel.app,AutoTest
+DOMAIN,sub-store.vercel.app,AutoTest
 DOMAIN,receiptcheck.quantumult.app,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,Telegram
 #Type:DOMAIN-SUFFIX,DOMAIN,DOMAIN-KEYWORD,USER-AGENT,URL-REGEX,IP-CIDR
